--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!-- Google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Alegreya|Anton|Bungee|Cabin|Catamaran|Exo+2|Indie+Flower|Oswald|PT+Sans+Narrow|Pangolin|Raleway|Roboto|Roboto+Condensed|Titillium+Web|Yanone+Kaffeesatz" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Alegreya|Anton|Bungee|Cabin|Catamaran|Exo+2|Indie+Flower|Oswald|Open+Sans:800|PT+Sans|PT+Sans+Narrow|Pangolin|Raleway|Roboto|Roboto+Condensed|Titillium+Web|Yanone+Kaffeesatz" rel="stylesheet">
 
 	<!-- CSS style sheet -->
 	<link rel="stylesheet" href="style.css">
