--- a/index.html
+++ b/index.html
@@ -2,45 +2,173 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
-	<meta name="description" content="Affordable and professional web design">
-	<meta name="keywords" content="web design, affordable web design">
-	<meta name="author" content="Raph Sutti">
-	<title>Raphael Suttiyotin | Portfolio</title>
+	<title>Portfolio - Raphael Suttiyotin</title>
 	
+	<!-- Bootstrap 4 -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
 	<!-- Font aswesome -->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!-- Google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Alegreya|Anton|Bungee|Cabin|Catamaran|Exo+2|Indie+Flower|Oswald|Open+Sans:800|PT+Sans|PT+Sans+Narrow|Pangolin|Raleway|Roboto|Roboto+Condensed|Titillium+Web|Yanone+Kaffeesatz" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Alegreya|Anton|Bungee|Cabin|Catamaran|Exo+2|Indie+Flower|Oswald|PT+Sans+Narrow|Pangolin|Raleway|Titillium+Web|Yanone+Kaffeesatz" rel="stylesheet">
 
+	<!-- JQuery -->
+	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+
+	<!-- JavaScript -->
+	<script src="javascript.js"></script>
 	<!-- CSS style sheet -->
 	<link rel="stylesheet" href="style.css">
 	
 	<!-- Live reload -->
 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-
 </head>
 <body>
-	<header id="header">
-		<h1>Raphael Suttiyotin</h1>
-		<h2>Engineer / Educator / Coder</h2>
-	</header>
-	<section id="section-a">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo unde aspernatur quasi illo rerum necessitatibus mollitia facere magnam dolore. Qui et iusto voluptates soluta accusantium earum repellendus exercitationem iste dolor nam, nobis vitae, repudiandae natus necessitatibus aspernatur consequatur neque tempora excepturi ex. Inventore sit accusamus impedit similique fugit nihil iure ullam, dolorem voluptate amet ea ipsam odio dolores unde placeat, blanditiis tempora veritatis dolore voluptas sed delectus iusto optio cupiditate. Voluptatum, nam! Non suscipit eaque optio id ratione repellendus sunt, pariatur quae culpa accusamus modi eveniet officiis nostrum sapiente aliquid maiores unde earum. Excepturi maxime earum magnam, distinctio atque cumque.</p>
-	</section>
-	<section id="section-b">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo unde aspernatur quasi illo rerum necessitatibus mollitia facere magnam dolore. Qui et iusto voluptates soluta accusantium earum repellendus exercitationem iste dolor nam, nobis vitae, repudiandae natus necessitatibus aspernatur consequatur neque tempora excepturi ex. Inventore sit accusamus impedit similique fugit nihil iure ullam, dolorem voluptate amet ea ipsam odio dolores unde placeat, blanditiis tempora veritatis dolore voluptas sed delectus iusto optio cupiditate. Voluptatum, nam! Non suscipit eaque optio id ratione repellendus sunt, pariatur quae culpa accusamus modi eveniet officiis nostrum sapiente aliquid maiores unde earum. Excepturi maxime earum magnam, distinctio atque cumque.</p>
-	</section>
-	<section id="section-c">
-		<div class="box-1">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quaerat, atque! Cupiditate ea quidem reprehenderit eum, aperiam sequi facere placeat.
+	<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
+		<a class="navbar-brand" href="#"><img src="https://image.ibb.co/chY9FR/RS4.png" alt="RS" border="0" id="logo"/></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item active ml-auto">
+					<a class="nav-link" href="#about-link">About<span class="sr-only" data-toggle="tab">(current)</span></a>
+				</li>
+				<li class="nav-item ml-auto">
+					<a class="nav-link" href="#project-link" data-toggle="tab">Projects</a>
+				</li>
+				<li class="nav-item ml-auto">
+					<a class="nav-link" href="#contact-link" data-toggle="tab">Contact</a>
+				</li>
+			</ul>
 		</div>
-		<div class="box-2">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quaerat, atque! Cupiditate ea quidem reprehenderit eum, aperiam sequi facere placeat.
+	</nav>
+	<div class="container">
+		<div id="home" class="title-block mx-auto">
+			<h1 class="text-center">Raphael Suttiyotin</h1>
+			<p class="text-center">Web Developer</p>
+			<ul class="list-inline text-center">
+				<li class="list-inline-item"><a href="https://github.com/raphsutti"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a></li>
+				<li class="list-inline-item"><a href="https://www.linkedin.com/in/raphael-suttiyotin-a384a430/"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a></li>
+				<li class="list-inline-item"><a href="https://twitter.com/neoster9"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a></li>
+			</ul>
 		</div>
-		<div class="box-3">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quaerat, atque! Cupiditate ea quidem reprehenderit eum, aperiam sequi facere placeat.
+		<div class="content">
+			<a id="about-link"></a>
+			<div class="row">
+		        <div class="col-sm-12 col-lg-4">
+		        	<img src="https://media-exp1.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAArzAAAAJDUzNGEwNDI2LTczYmYtNDU5Yi04MzNmLTRiNjU2MTdjNGU3OA.jpg" alt="" />
+		        </div>
+		        <div class="col-sm-12 col-lg-8">
+		        	<p>I'm an experienced Mechanical / Electrical Engineer with coding skills gain through self teaching programming during my free time.</p> 
+					<p>Outside of work, I volunteer as a code club facilitator teaching primary school kids basic coding (Scratch, HTML &amp; CSS, Python). Teaching them how to think and provide solutions through programming brings me great satisfaction.
+					<p>I'm open to freelance web projects and looking to becoming a professional web developer. Check out my project portfolio below!</p>
+				</div>
+			</div>
+			
+<!-- 			<div class="row">
+				<div class="mx-auto col-sm-10 col-md-8 col-lg-8 col-xl-6">
+					<h1 class="text-center heading">Projects</h1>
+					<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+						<ol class="carousel-indicators">
+							<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+						</ol>
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img class="d-block w-100 carousel"  src="https://image.ibb.co/gDnmC6/quote.png" border="0" alt="First slide">								
+							</div>
+							<div class="carousel-item">
+								<img class="d-block w-100" src="https://image.ibb.co/b8q1em/weather.png" alt="weather" border="0" alt="Second slide">
+							</div>
+							<div class="carousel-item">
+								<img class="d-block w-100" src="https://image.ibb.co/gATts6/wiki.png" alt="wiki" border="0" alt="Third slide">
+							</div>
+						</div>
+						<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="grid">
+				<div>Quote Generator</div>
+				<div>
+					<h4>Quote Generator</h4>
+					<h6>Generate random quotes</h6>
+					<h6>HTML, CSS, JavaScript, JQuery</h6>
+				</div>
+				<div>Weather App</div>
+				<div>Shows current local weather</div>
+				<div>Wikipedia Search</div>
+				<div>Search Wikipedia articles</div>
+			</div> -->
+			
+			<a id="project-link"></a>
+			<div class="grid">
+				<div class="block">
+					<img src="https://image.ibb.co/iw3H4m/tribute.png" alt="tribute">
+					<div class="caption">Tribute Page</div>
+					<h6>Tribute page with timeline</h6>
+					<h6>Skills: Bootstrap CSS</h6>
+				</div>
+				<div class="block">
+					<img src="https://image.ibb.co/b8q1em/weather.png" alt="weather">
+					<div class="caption">Weather App</div>
+					<h6>Reports current local weather</h6>
+					<h6>Skills: openweather API</h6>
+				</div>
+				<div class="block">
+					<img src="https://image.ibb.co/gATts6/wiki.png" alt="wiki">
+					<div class="caption">Wikipedia Search</div>
+					<h6>Search multiple Wikipedia articles</h6>
+					<h6>Skills: Wikipedia API</h6>
+				</div>
+				<div class="block">
+					<img src="https://image.ibb.co/gDnmC6/quote.png" alt="quote">
+					<div class="caption">Quote Generator</div>
+					<h6>Generate random quotes and tweet button</h6>
+					<h6>Skills: JQuery</h6>
+				</div>
+				<div class="block">
+					<img src="https://image.ibb.co/nxhAPm/calc.png" alt="calculator">
+					<div class="caption">JavaScript Calculator</div>
+					<h6>Return simple mathematical solutions</h6>
+					<h6>Skills: JQuery</h6>
+				</div>
+				<div class="block">
+					<img src="https://image.ibb.co/fXJs4m/pomodoro.png" alt="pomodoro">
+					<div class="caption">Pomodoro Clock</div>
+					<h6>Set Pomodoro timer and allow user to set break durations</h6>
+					<h6>Skills: JQuery</h6>
+				</div>
+			</div>
+			
 		</div>
-	</section>
+
+		<div id="contact" class="contact mx-auto">
+			<a href="#" class="" id="contact-link"></a>
+			<h1 class="text-center">Let's get in touch!</h1>
+			<ul class="list-inline text-center">
+				<li class="list-inline-item"><a href="https://github.com/raphsutti"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a></li>
+				<li class="list-inline-item"><a href="https://www.linkedin.com/in/raphael-suttiyotin-a384a430/"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a></li>
+				<li class="list-inline-item"><a href="https://twitter.com/neoster9"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a></li>
+				<li class="list-inline-item"><a href="mailto:r.suttiyotin@gmail.com"><i class="fa fa-envelope-square fa-3x" aria-hidden="true"></i></a></li>
+			</ul>
+		</div>
+		<p class="text-center" id="footer">Created by Raphael Suttiyotin - 2017</p>
+	</div>
 </body>
+
+<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+</html> -->
