--- a/index.html
+++ b/index.html
@@ -29,22 +29,29 @@
 		<h1>Raphael Suttiyotin</h1>
 		<h2>Engineer / Educator / Coder</h2>
 	</header>
-	<section id="about">
-		<h2>About Me</h2>
-		<p>I'm a Mechanical Engineer and I love to code. I also volunteer at Code Club, teaching kids how to code. I enjoy creating websites and learning programming in my spare time</p>
-	</section>
-	<section id="section-b">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo unde aspernatur quasi illo rerum necessitatibus mollitia facere magnam dolore. Qui et iusto voluptates soluta accusantium earum repellendus exercitationem iste dolor nam, nobis vitae, repudiandae natus necessitatibus aspernatur consequatur neque tempora excepturi ex. Inventore sit accusamus impedit similique fugit nihil iure ullam, dolorem voluptate amet ea ipsam odio dolores unde placeat, blanditiis tempora veritatis dolore voluptas sed delectus iusto optio cupiditate. Voluptatum, nam! Non suscipit eaque optio id ratione repellendus sunt, pariatur quae culpa accusamus modi eveniet officiis nostrum sapiente aliquid maiores unde earum. Excepturi maxime earum magnam, distinctio atque cumque.</p>
-	</section>
-	<section id="section-c">
-		<div class="box-1">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quaerat, atque! Cupiditate ea quidem reprehenderit eum, aperiam sequi facere placeat.
-		</div>
-		<div class="box-2">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quaerat, atque! Cupiditate ea quidem reprehenderit eum, aperiam sequi facere placeat.
-		</div>
-		<div class="box-3">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quaerat, atque! Cupiditate ea quidem reprehenderit eum, aperiam sequi facere placeat.
-		</div>
-	</section>
+	<div class="grid">
+		<div id="profile"><img src="./img/profile.jpg" alt="profile"></div>
+		<section id="about">
+			<h2>About Me</h2>
+			<p>I'm a Mechanical Engineer and I love to code. I volunteer at Code Club, teaching kids how to code. I enjoy creating websites and learning programming in my spare time</p>
+		</section>
+		<section id="section-b">
+			<p>Lorem ipsum dolor sit amet, </p>
+		</section>
+		<section id="section-c">
+			<div class="box-1">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quaerat, atque! Cupiditate ea quidem reprehenderit eum, aperiam sequi facere placeat.
+			</div>
+			<div class="box-2">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quaerat, atque! Cupiditate ea quidem reprehenderit eum, aperiam sequi facere placeat.
+			</div>
+			<div class="box-3">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quaerat, atque! Cupiditate ea quidem reprehenderit eum, aperiam sequi facere placeat.
+			</div>
+		</section>
+	</div>
+	<footer class="grid">
+		<div>Made by Raphael Suttiyotin - 2017</div>
+		<div><a href="raphsutti.com">https://www.raphsutti.com</a></div>
+	</footer>
 </body>
