--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<h2>About Me</h2>
 			<p>I'm a Mechanical Engineer and I love to code. I volunteer at Code Club, teaching kids how to code. I enjoy creating websites and learning programming in my spare time</p>
 		</section>
-		<section id="section-b">
+<!-- 		<section id="section-b">
 			<p>Lorem ipsum dolor sit amet, </p>
 		</section>
 		<section id="section-c">
@@ -48,10 +48,10 @@
 			<div class="box-3">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quaerat, atque! Cupiditate ea quidem reprehenderit eum, aperiam sequi facere placeat.
 			</div>
-		</section>
+		</section> -->
 	</div>
 	<footer class="grid">
 		<div>Made by Raphael Suttiyotin - 2017</div>
-		<div><a href="raphsutti.com">https://www.raphsutti.com</a></div>
+		<div><a href="./v1/index.html">Old site</a></div>
 	</footer>
 </body>
