--- a/v1/index.html
+++ b/v1/index.html
@@ -114,42 +114,55 @@
 			
 			<a id="project-link"></a>
 			<div class="grid">
-				<div class="block">
-					<img src="https://image.ibb.co/iw3H4m/tribute.png" alt="tribute">
-					<div class="caption">Tribute Page</div>
-					<h6>Tribute page with timeline</h6>
-					<h6>Skills: Bootstrap CSS</h6>
-				</div>
-				<div class="block">
-					<img src="https://image.ibb.co/b8q1em/weather.png" alt="weather">
-					<div class="caption">Weather App</div>
-					<h6>Reports current local weather</h6>
-					<h6>Skills: openweather API</h6>
-				</div>
-				<div class="block">
-					<img src="https://image.ibb.co/gATts6/wiki.png" alt="wiki">
-					<div class="caption">Wikipedia Search</div>
-					<h6>Search multiple Wikipedia articles</h6>
-					<h6>Skills: Wikipedia API</h6>
-				</div>
-				<div class="block">
-					<img src="https://image.ibb.co/gDnmC6/quote.png" alt="quote">
-					<div class="caption">Quote Generator</div>
-					<h6>Generate random quotes and tweet button</h6>
-					<h6>Skills: JQuery</h6>
-				</div>
-				<div class="block">
-					<img src="https://image.ibb.co/nxhAPm/calc.png" alt="calculator">
-					<div class="caption">JavaScript Calculator</div>
-					<h6>Return simple mathematical solutions</h6>
-					<h6>Skills: JQuery</h6>
-				</div>
-				<div class="block">
-					<img src="https://image.ibb.co/fXJs4m/pomodoro.png" alt="pomodoro">
-					<div class="caption">Pomodoro Clock</div>
-					<h6>Set Pomodoro timer and allow user to set break durations</h6>
-					<h6>Skills: JQuery</h6>
-				</div>
+
+				<a href="../tribute/index.html">
+					<div class="block">
+						<img class="project" src="https://image.ibb.co/iw3H4m/tribute.png" alt="tribute">		
+						<div class="caption">Tribute Page</div>
+						<h6>Tribute page with timeline</h6>
+						<h6>Skills: Bootstrap CSS</h6>
+					</div>
+				</a>
+				<a href="../weather/index.html">
+					<div class="block">
+						<img class="project" src="https://image.ibb.co/b8q1em/weather.png" alt="weather">
+						<div class="caption">Weather App</div>
+						<h6>Reports current local weather</h6>
+						<h6>Skills: openweather API</h6>
+					</div>
+				</a>
+				<a href="../wiki/index.html">
+					<div class="block">
+						<img class="project" src="https://image.ibb.co/gATts6/wiki.png" alt="wiki">
+						<div class="caption">Wikipedia Search</div>
+						<h6>Search multiple Wikipedia articles</h6>
+						<h6>Skills: Wikipedia API</h6>
+					</div>
+				</a>
+				<a href="../quote/index.html">
+					<div class="block">
+						<img class="project" src="https://image.ibb.co/gDnmC6/quote.png" alt="quote">
+						<div class="caption">Quote Generator</div>
+						<h6>Generate random quotes and tweet button</h6>
+						<h6>Skills: JQuery</h6>
+					</div>
+				</a>
+				<a href="../calc/index.html">
+					<div class="block">
+						<img class="project" src="https://image.ibb.co/nxhAPm/calc.png" alt="calculator">
+						<div class="caption">JavaScript Calculator</div>
+						<h6>Return simple mathematical solutions</h6>
+						<h6>Skills: JQuery</h6>
+					</div>
+				</a>
+				<a href="../pomodoro/index.html">
+					<div class="block">
+						<img class="project" src="https://image.ibb.co/fXJs4m/pomodoro.png" alt="pomodoro">
+						<div class="caption">Pomodoro Clock</div>
+						<h6>Set Pomodoro timer and allow user to set break durations</h6>
+						<h6>Skills: JQuery</h6>
+					</div>
+				</a>
 			</div>
 			
 		</div>
