mountain bg pic

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
 		</section> -->
 	</div>
 	<footer class="grid">
-		<div>Made by Raphael Suttiyotin - 2017</div>
-		<div><a href="./v1/index.html">Old site</a></div>
+		<div>Made by Raphael Suttiyotin - 2017 <a href="./v1/index.html">Old site</a></div>
 	</footer>
 </body>
