--- a/index.html
+++ b/index.html
@@ -35,22 +35,13 @@
 			<h2>About Me</h2>
 			<p>I'm a Mechanical Engineer and I love to code. I volunteer at Code Club, teaching kids how to code. I enjoy creating websites and learning programming in my spare time</p>
 		</section>
-<!-- 		<section id="section-b">
-			<p>Lorem ipsum dolor sit amet, </p>
+		<section id="projects">
+			<h2>Projects</h2>
+			<p>I've created websites and apps using HTML, CSS, JavaScript, and JQuery. I've also taught kids using Scratch, HTML, CSS, and Python</p>
 		</section>
-		<section id="section-c">
-			<div class="box-1">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quaerat, atque! Cupiditate ea quidem reprehenderit eum, aperiam sequi facere placeat.
-			</div>
-			<div class="box-2">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quaerat, atque! Cupiditate ea quidem reprehenderit eum, aperiam sequi facere placeat.
-			</div>
-			<div class="box-3">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quaerat, atque! Cupiditate ea quidem reprehenderit eum, aperiam sequi facere placeat.
-			</div>
-		</section> -->
+		<div id="tribute"><a href="./tribute/index.html"><img src="./img/tribute.png" alt="tribute"></a></div>
+		<footer id="footer">
+			Made by Raphael Suttiyotin 2017. Check out my <a href="./v1/index.html">old landing page</a>
+		</footer>
 	</div>
-	<footer class="grid">
-		<div>Made by Raphael Suttiyotin - 2017 <a href="./v1/index.html">Old site</a></div>
-	</footer>
 </body>
