links to projects and grid styling

--- a/index.html
+++ b/index.html
@@ -40,8 +40,13 @@
 			<p>I've created websites and apps using HTML, CSS, JavaScript, and JQuery. I've also taught kids using Scratch, HTML, CSS, and Python</p>
 		</section>
 		<div id="tribute"><a href="./tribute/index.html"><img src="./img/tribute.png" alt="tribute"></a></div>
+		<div id="weather"><a href="./weather/index.html"><img src="./img/weather.png" alt="weather"></a></div>
+		<div id="wiki"><a href="./wiki/index.html"><img src="./img/wiki.png" alt="wiki"></a></div>
+		<div id="quote"><a href="./quote/index.html"><img src="./img/quote.png" alt="quote"></a></div>
+		<div id="calc"><a href="./calc/index.html"><img src="./img/calc.png" alt="calc"></a></div>
+		<div id="pomodoro"><a href="./pomodoro/index.html"><img src="./img/pomodoro.png" alt="pomodoro"></a></div>
+	</div>
 		<footer id="footer">
 			Made by Raphael Suttiyotin 2017. Check out my <a href="./v1/index.html">old landing page</a>
 		</footer>
-	</div>
 </body>
