Shadow effect and gap before projects list

--- a/index.html
+++ b/index.html
@@ -30,21 +30,24 @@
 		<h2>Engineer / Educator / Coder</h2>
 	</header>
 	<div class="grid">
-		<div id="profile"><img src="./img/profile.jpg" alt="profile"></div>
-		<section id="about">
+		<div id="profile"><img src="./img/profile.jpg" class="shadow" alt="profile"></div>
+		<section id="about" class="shadow">
 			<h2>About Me</h2>
 			<p>I'm a Mechanical Engineer and I love to code. I volunteer at Code Club, teaching kids how to code. I enjoy creating websites and learning programming in my spare time</p>
 		</section>
-		<section id="projects">
+		<section id="projects" class="shadow">
 			<h2>Projects</h2>
 			<p>I've created websites and apps using HTML, CSS, JavaScript, and JQuery. I've also taught kids using Scratch, HTML, CSS, and Python</p>
+			<p>Check out some of my projects below</p>
 		</section>
-		<div id="tribute"><a href="./tribute/index.html"><img src="./img/tribute.png" alt="tribute"></a></div>
-		<div id="weather"><a href="./weather/index.html"><img src="./img/weather.png" alt="weather"></a></div>
-		<div id="wiki"><a href="./wiki/index.html"><img src="./img/wiki.png" alt="wiki"></a></div>
-		<div id="quote"><a href="./quote/index.html"><img src="./img/quote.png" alt="quote"></a></div>
-		<div id="calc"><a href="./calc/index.html"><img src="./img/calc.png" alt="calc"></a></div>
-		<div id="pomodoro"><a href="./pomodoro/index.html"><img src="./img/pomodoro.png" alt="pomodoro"></a></div>
+		<div id="linked"><img src="./img/linked.jpg" class="shadow" alt="profile"></div>
+		<div id="spacer"></div>
+		<div id="tribute"><a href="./tribute/index.html"><img src="./img/tribute.png" class="shadow" alt="tribute"></a></div>
+		<div id="weather"><a href="./weather/index.html"><img src="./img/weather.png" class="shadow" alt="weather"></a></div>
+		<div id="wiki"><a href="./wiki/index.html"><img src="./img/wiki.png" class="shadow" alt="wiki"></a></div>
+		<div id="quote"><a href="./quote/index.html"><img src="./img/quote.png" class="shadow" alt="quote"></a></div>
+		<div id="calc"><a href="./calc/index.html"><img src="./img/calc.png" class="shadow" alt="calc"></a></div>
+		<div id="pomodoro"><a href="./pomodoro/index.html"><img src="./img/pomodoro.png" class="shadow" alt="pomodoro"></a></div>
 	</div>
 		<footer id="footer">
 			Made by Raphael Suttiyotin 2017. Check out my <a href="./v1/index.html">old landing page</a>
