--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
-	<meta name="description" content="Affordable and professional web design">
-	<meta name="keywords" content="web design, affordable web design">
-	<meta name="author" content="Raph Sutti">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,">
+	<meta name="description" content="front end developer portfolio">
+	<meta name="keywords" content="web design, front end developer, melbourne">
+	<meta name="author" content="Raphael Suttiyotin">
 	<title>Raphael Suttiyotin | Portfolio</title>
 	
 	<!-- Bootstrap 4 -->
