--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
 		<div id="pomodoro"><a href="./pomodoro/index.html"><img src="./img/pomodoro.png" class="shadow" alt="pomodoro"></a></div>
 	</div>
 		<footer id="footer">
-			Made by Raphael Suttiyotin 2017. Check out my <a href="./v1/index.html">old landing page</a>
+			Made by Raphael Suttiyotin 2017. <a href="./v1/index.html">Old landing page</a>
 		</footer>
 </body>
