project banner added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 	<header id="header">
 		<h1>Raphael Suttiyotin</h1>
 		<h2>Engineer / Educator / Coder</h2>
+		<ul class="social">
+			<li><a href="https://www.linkedin.com/in/raphael-suttiyotin-a384a430"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
+			<li><a href="https://twitter.com/neoster9"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
+			<li><a href="https://github.com/raphsutti"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
+		</ul>
 	</header>
 	<div class="grid">
 		<div id="profile"><img src="./img/profile.jpg" class="shadow" alt="profile"></div>
@@ -37,12 +42,13 @@
 			<p>I'm a Mechanical Engineer and I love to code. I volunteer at Code Club, teaching kids how to code. I enjoy creating websites and learning programming in my spare time</p>
 		</section>
 		<section id="projects" class="shadow">
-			<h2>Projects</h2>
+			<!-- <h2>Projects</h2> -->
 			<p>I've created websites and apps using HTML, CSS, JavaScript, and JQuery. I've also taught kids using Scratch, HTML, CSS, and Python</p>
 			<p>Check out some of my projects below</p>
 		</section>
 		<div id="linked"><img src="./img/linked.jpg" class="shadow" alt="profile"></div>
 		<div id="spacer"></div>
+		<div id="project-banner">Projects</div>
 		<div id="tribute"><a href="./tribute/index.html"><img src="./img/tribute.png" class="shadow" alt="tribute"></a></div>
 		<div id="weather"><a href="./weather/index.html"><img src="./img/weather.png" class="shadow" alt="weather"></a></div>
 		<div id="wiki"><a href="./wiki/index.html"><img src="./img/wiki.png" class="shadow" alt="wiki"></a></div>
