Added get in touch contact2 banner

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 			<p>I'm a Mechanical Engineer and I love to code. I volunteer at Code Club, teaching kids how to code. I enjoy creating websites and learning programming in my spare time</p>
 		</section>
 		<section id="projects" class="shadow">
-			<!-- <h2>Projects</h2> -->
 			<p>I've created websites and apps using HTML, CSS, JavaScript, and JQuery. I've also taught kids using Scratch, HTML, CSS, and Python</p>
 			<p>Check out some of my projects below</p>
 		</section>
@@ -55,6 +54,15 @@
 		<div id="quote"><a href="./quote/index.html"><img src="./img/quote.png" class="shadow" alt="quote"></a></div>
 		<div id="calc"><a href="./calc/index.html"><img src="./img/calc.png" class="shadow" alt="calc"></a></div>
 		<div id="pomodoro"><a href="./pomodoro/index.html"><img src="./img/pomodoro.png" class="shadow" alt="pomodoro"></a></div>
+		<div id="contact">
+			<p>Let's get in touch</p>
+			<ul class="contact2">
+				<li><a href="https://www.linkedin.com/in/raphael-suttiyotin-a384a430"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
+				<li><a href="https://twitter.com/neoster9"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
+				<li><a href="https://github.com/raphsutti"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a></li>
+				<li><a href="mailto:r.suttiyotin@gmail.com"><i class="fa fa-envelope-square fa-2x" aria-hidden="true"></i></a></li>
+			</ul>
+		</div>
 	</div>
 		<footer id="footer">
 			Made by Raphael Suttiyotin 2017. Improved from my <a href="./v1/index.html">old landing page</a>
