--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
 		</div>
 	</div>
 		<footer id="footer">
-			Made by Raphael Suttiyotin 2017. Improved from my <a href="./v1/index.html">old landing page</a>. Test 6
+			Made by Raphael Suttiyotin 2017. Improved from my <a href="./v1/index.html">old landing page</a>. Version 1.1
 		</footer>
 </body>
