--- a/jr/index.html
+++ b/jr/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Junior Code - Coding Made Fun</title>
-		<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:700|Open+Sans" rel="stylesheet">  
+		<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:700|Noto+Sans|Noto+Serif|Open+Sans" rel="stylesheet">
 		
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous"> 
