Round border radius and font change

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!-- Google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Alegreya|Anton|Bungee|Cabin|Catamaran|Exo+2|Indie+Flower|Oswald|Open+Sans:800|PT+Sans|PT+Sans+Narrow|Pangolin|Raleway|Roboto|Roboto+Condensed|Titillium+Web|Yanone+Kaffeesatz" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Alegreya|Anton|Bungee|Cabin|Catamaran|Exo+2|Indie+Flower|Oswald|Open+Sans|PT+Sans|PT+Sans+Narrow|Pangolin|Raleway|Roboto|Roboto+Condensed|Titillium+Web|Yanone+Kaffeesatz" rel="stylesheet">
 
 	<!-- CSS style sheet -->
 	<link rel="stylesheet" href="style.css">
@@ -37,12 +37,12 @@
 	</header>
 	<div class="grid">
 		<div id="profile"><img src="./img/profile.jpg" class="shadow" alt="profile"></div>
-		<section id="about" class="shadow">
+		<section id="about">
 			<h2>About Me</h2>
 			<p>I'm a Mechanical Engineer and I love to code. I volunteer at Code Club, teaching kids how to code. I enjoy creating websites and learning programming in my spare time</p>
 		</section>
-		<section id="projects" class="shadow">
-			<p>I've created websites and apps using HTML, CSS, JavaScript, and JQuery. I've also taught kids using Scratch, HTML, CSS, and Python</p>
+		<section id="projects">
+			<p>I've created websites and apps using HTML, CSS, JavaScript, and JQuery. I'm an aspiring Front End Developer, so if you are looking for an intern, let's have a chat!</p>
 			<p>Check out some of my projects below</p>
 		</section>
 		<div id="linked"><img src="./img/linked.jpg" class="shadow" alt="profile"></div>
