added menu project to links

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		<div id="quote"><a href="./quote/index.html"><img src="./img/quote.png" class="shadow" alt="quote"></a></div>
 		<div id="calc"><a href="./calc/index.html"><img src="./img/calc.png" class="shadow" alt="calc"></a></div>
 		<div id="pomodoro"><a href="./pomodoro/index.html"><img src="./img/pomodoro.png" class="shadow" alt="pomodoro"></a></div>
+		<div id="menu"><a href="./menu/index.html"><img src="./img/menu.png" class="shadow" alt="menu"></a></div>
 		<div id="contact">
 			<p>Let's get in touch</p>
 			<ul class="contact2">
