--- a/menu/index.html
+++ b/menu/index.html
@@ -2,26 +2,27 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Patua+One|Roboto+Condensed:700" rel="stylesheet"> 
-
 	<link rel="stylesheet" href="style.css">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+	<script src="javascript.js"></script>
+
 	<title>Burger Lovers</title>
 </head>
 <body>
 	<h1>Burger Lovers</h1>
 	<h2>The Best Burgers</h2>
 	<div class="first">
-		<h3>Plain and Simple <span class="price">$10</span></h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nemo fuga ullam perspiciatis facere amet pariatur incidunt asperiores at, autem, placeat rerum totam ipsa aut velit et reprehenderit tempore. Aut odio necessitatibus atque alias tempore quam quod quis itaque mollitia.</p>
+		<p>Plain and Simple <span class="price">$10</span><br/>
+		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nemo fuga ullam perspiciatis facere amet pariatur incidunt asperiores at, autem, placeat rerum totam ipsa aut velit et reprehenderit tempore. Aut odio necessitatibus atque alias tempore quam quod quis itaque mollitia.</small></p>
 	</div>
 	<div class="second">
-		<h3>Bacon<span class="price">$12</span></h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nemo fuga ullam perspiciatis facere amet pariatur incidunt asperiores at, autem, placeat rerum totam ipsa aut velit et reprehenderit tempore. Aut odio necessitatibus atque alias tempore quam quod quis itaque mollitia.</p>
+		<p>Bacon<span class="price">$12</span><br/>
+		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nemo fuga ullam perspiciatis facere amet pariatur incidunt asperiores at, autem, placeat rerum totam ipsa aut velit et reprehenderit tempore. Aut odio necessitatibus atque alias tempore quam quod quis itaque mollitia.</small></p>
 	</div>
 	<div class="third">
-		<h3>Special <span class="price">$14</span></h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nemo fuga ullam perspiciatis facere amet pariatur incidunt asperiores at, autem, placeat rerum totam ipsa aut velit et reprehenderit tempore. Aut odio necessitatibus atque alias tempore quam quod quis itaque mollitia.</p>
+		<p>Special <span class="price">$14</span><br/>
+		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nemo fuga ullam perspiciatis facere amet pariatur incidunt asperiores at, autem, placeat rerum totam ipsa aut velit et reprehenderit tempore. Aut odio necessitatibus atque alias tempore quam quod quis itaque mollitia.</small></p>
 	</div>
 </body>
 </html>
