--- a/menu/index.html
+++ b/menu/index.html
@@ -12,17 +12,23 @@
 <body>
 	<h1>Burger Lovers</h1>
 	<h2>The Best Burgers</h2>
+	<h3>+61 04 12 345 678</h3>
+	<h3>123 Fake Street</h3>
+	<button>Book now</button>
 	<div class="first">
 		<p>Plain and Simple <span class="price">$10</span><br/>
-		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nemo fuga ullam perspiciatis facere amet pariatur incidunt asperiores at, autem, placeat rerum totam ipsa aut velit et reprehenderit tempore. Aut odio necessitatibus atque alias tempore quam quod quis itaque mollitia.</small></p>
+		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore laboriosam saepe molestiae maxime ut, porro nam, quo voluptates natus facilis sed laudantium quas culpa pariatur quaerat nisi ab!</small></p>
 	</div>
 	<div class="second">
 		<p>Bacon<span class="price">$12</span><br/>
-		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nemo fuga ullam perspiciatis facere amet pariatur incidunt asperiores at, autem, placeat rerum totam ipsa aut velit et reprehenderit tempore. Aut odio necessitatibus atque alias tempore quam quod quis itaque mollitia.</small></p>
+		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque dicta ut tenetur nobis odio nostrum aspernatur suscipit vero, enim dolorum maiores sunt.</small></p>
 	</div>
 	<div class="third">
 		<p>Special <span class="price">$14</span><br/>
-		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nemo fuga ullam perspiciatis facere amet pariatur incidunt asperiores at, autem, placeat rerum totam ipsa aut velit et reprehenderit tempore. Aut odio necessitatibus atque alias tempore quam quod quis itaque mollitia.</small></p>
+		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quasi facilis adipisci rem debitis vitae et autem doloribus, ipsum? Incidunt adipisci cupiditate repellat, hic harum!</small></p>
 	</div>
+	<footer>
+		Made by Raph Sutti - 2018
+	</footer>
 </body>
 </html>
