resized mobile size

--- a/menu/index.html
+++ b/menu/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,">
+	<meta name="description" content="front end developer portfolio">
+	<meta name="keywords" content="web design, front end developer, melbourne, burgers">
+	<meta name="author" content="Raphael Suttiyotin">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Patua+One|Roboto+Condensed:700" rel="stylesheet"> 
 	<link rel="stylesheet" href="style.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
