--- a/menu/index.html
+++ b/menu/index.html
@@ -22,15 +22,15 @@
 	<button>Book now</button>
 	<div class="first">
 		<p>Plain and Simple <span class="price">$10</span><br/>
-		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore laboriosam saepe molestiae maxime ut, porro nam, quo voluptates natus facilis sed laudantium quas culpa pariatur quaerat nisi ab!</small></p>
+		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, pariatur.</small></p>
 	</div>
 	<div class="second">
 		<p>Bacon<span class="price">$12</span><br/>
-		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque dicta ut tenetur nobis odio nostrum aspernatur suscipit vero, enim dolorum maiores sunt.</small></p>
+		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit repellendus dolore eos ea, rem.</small></p>
 	</div>
 	<div class="third">
 		<p>Special <span class="price">$14</span><br/>
-		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quasi facilis adipisci rem debitis vitae et autem doloribus, ipsum? Incidunt adipisci cupiditate repellat, hic harum!</small></p>
+		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small></p>
 	</div>
 	<footer>
 		Made by Raph Sutti - 2018
