mouseenter function to show description

--- a/menu/index.html
+++ b/menu/index.html
@@ -18,7 +18,7 @@
 	<h1>Burger Lovers</h1>
 	<h2>The Best Burgers</h2>
 	<h3>+61 04 12 345 678</h3>
-	<h3>123 Fake Street</h3>
+	<h3>123 Grilled Street</h3>
 	<button>Book now</button>
 	<div class="first">
 		<p>Plain and Simple <span class="price">$10</span><br/>
@@ -30,7 +30,7 @@
 	</div>
 	<div class="third">
 		<p>Special <span class="price">$14</span><br/>
-		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small></p>
+		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, in quam.</small></p>
 	</div>
 	<footer>
 		Made by Raph Sutti - 2018
