nav bar with active label

--- a/menu/index.html
+++ b/menu/index.html
@@ -15,12 +15,21 @@
 	<title>Burger Lovers</title>
 </head>
 <body>
+	<header>
+		<nav>
+			<ul>
+				<li class="active nav-item"><a href="#" class="nav-link">Home</a></li>
+				<li class="nav-item"><a href="#menu" class="nav-link">Menu</a></li>
+				<li class="nav-item"><a href="#" class="nav-link">Booking</a></li>
+			</ul>
+		</nav>
+	</header>
 	<h1>Burger Lovers</h1>
 	<h2>The Best Burgers</h2>
 	<h3>+61 04 12 345 678</h3>
 	<h3>123 Grilled Street</h3>
 	<button>Book now</button>
-	<div class="first">
+	<div class="first" id="menu">
 		<p>Plain and Simple <span class="price">$10</span><br/>
 		<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, pariatur.</small></p>
 	</div>
