--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
 	<!-- Bootstrap 4 -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
 	<!-- Font aswesome -->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -30,31 +26,6 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-		<a class="navbar-brand" href="#">Raphael Suttiyotin</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNavDropdown">
-			<ul class="navbar-nav">
-				<!-- <li class="nav-item active"> -->
-					<!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
-				<!-- </li> -->
-				<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Projects</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Contact</a>
-				</li>
-				
-			</ul>
-		</div>
-	</nav>
-
-
 	<header id="header">
 		<h1>Raphael Suttiyotin</h1>
 		<h2>Engineer / Educator / Coder</h2>
@@ -65,17 +36,19 @@
 		</ul>
 	</header>
 	<div class="grid">
-		<div id="profile"><img src="./img/profile.jpg" class="shadow" alt="profile"></div>
+		<div id="profile">
+			<img src="./img/profile.jpg" alt="">
+		</div>
+		<div id="linked">
+			<img src="./img/linked.jpg" alt="">
+		</div>
 		<section id="about">
 			<h2>About Me</h2>
 			<p>I'm a Mechanical Engineer and I love to code. I volunteer at Code Club, teaching kids how to code. I enjoy creating websites and learning programming in my spare time</p>
-		</section>
-		<section id="projects">
-			<p>I've created websites and apps using HTML, CSS, JavaScript, and JQuery. I'm an aspiring Front End Developer, so if you are looking for an intern, let's have a chat!</p>
+			<p>I've completed <a href="https://www.freecodecamp.org/raphsutti/front-end-certification">Front End Developer certification</a> from FreeCodeCamp.org and Web Development course on Udemy. I am familiar with HTML, CSS, JavaScript, and JQuery. I'm an aspiring Front End Developer, so if you are looking for a Junior Developer, let's have a chat!</p>
 			<p>Check out some of my projects below</p>
 		</section>
-		<div id="linked"><img src="./img/linked.jpg" class="shadow" alt="profile"></div>
-		<div id="spacer"></div>
+		<!-- <div id="spacer"></div> -->
 		<div id="project-banner">Projects</div>
 		<div id="tribute"><a href="./tribute/index.html"><img src="./img/tribute.png" class="shadow" alt="tribute"></a></div>
 		<div id="weather"><a href="./weather/index.html"><img src="./img/weather.png" class="shadow" alt="weather"></a></div>
@@ -83,7 +56,7 @@
 		<div id="quote"><a href="./quote/index.html"><img src="./img/quote.png" class="shadow" alt="quote"></a></div>
 		<div id="calc"><a href="./calc/index.html"><img src="./img/calc.png" class="shadow" alt="calc"></a></div>
 		<div id="pomodoro"><a href="./pomodoro/index.html"><img src="./img/pomodoro.png" class="shadow" alt="pomodoro"></a></div>
-		<div id="menu"><a href="./menu/index.html"><img src="./img/menu.png" class="shadow" alt="menu"></a></div>
+		<div id="menu"><a href="./menu/index.html"><img src="./img/menu.jpg" class="shadow" alt="menu"></a></div>
 		<div id="contact">
 			<p>Let's get in touch</p>
 			<ul class="contact2">
@@ -95,6 +68,6 @@
 		</div>
 	</div>
 		<footer id="footer">
-			Made by Raphael Suttiyotin 2017. <a href="./v1/index.html">Old landing page</a>
+			Made by Raphael Suttiyotin 2018. <a href="./v1/index.html">Old landing page</a>
 		</footer>
 </body>
