--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<img src="./img/linked.jpg" alt="">
 		</div>
 		<section id="about">
-			<h2>About Me</h2>
+			<!-- <h2>About Me</h2> -->
 			<p>I'm a Mechanical Engineer and I love to code. I volunteer at Code Club, teaching kids how to code. I enjoy creating websites and learning programming in my spare time</p>
 			<p>I've completed <a href="https://www.freecodecamp.org/raphsutti/front-end-certification">Front End Developer certification</a> from FreeCodeCamp.org and Web Development course on Udemy. I am familiar with HTML, CSS, JavaScript, and JQuery. I'm an aspiring Front End Developer, so if you are looking for a Junior Developer, let's have a chat!</p>
 			<p>Check out some of my projects below</p>
@@ -57,6 +57,8 @@
 		<div id="calc"><a href="./calc/index.html"><img src="./img/calc.png" class="shadow" alt="calc"></a></div>
 		<div id="pomodoro"><a href="./pomodoro/index.html"><img src="./img/pomodoro.png" class="shadow" alt="pomodoro"></a></div>
 		<div id="menu"><a href="./menu/index.html"><img src="./img/menu.jpg" class="shadow" alt="menu"></a></div>
+		<div id="puppy"><a href="./puppy/index.html"><img src="./img/puppy.jpg" class="shadow" alt="puppy"></a></div>
+		<div id="gallery"><a href="./gallery/index.html"><img src="./img/gallery.png" class="shadow" alt="gallery"></a></div>
 		<div id="contact">
 			<p>Let's get in touch</p>
 			<ul class="contact2">
