--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 		<div id="menu"><a href="./menu/index.html"><img src="./img/menu.jpg" class="shadow" alt="menu"></a></div>
 		<div id="puppy"><a href="./puppy/index.html"><img src="./img/puppy.jpg" class="shadow" alt="puppy"></a></div>
 		<div id="gallery"><a href="./gallery/index.html"><img src="./img/gallery.png" class="shadow" alt="gallery"></a></div>
+		<div id="colour"><a href="./colour/index.html"><img src="./img/colour.png" class="shadow" alt="colourgame"></a></div>
 		<div id="contact">
 			<p>Let's get in touch</p>
 			<ul class="contact2">
