--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<meta name="viewport" content="width=device-width,">
+	<!-- <meta name="viewport" content="width=device-width,"> -->
 	<meta name="description" content="front end developer portfolio">
 	<meta name="keywords" content="web design, front end developer, melbourne">
 	<meta name="author" content="Raphael Suttiyotin">
@@ -16,13 +16,10 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!-- Google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Alegreya|Anton|Bungee|Cabin|Catamaran|Exo+2|Indie+Flower|Oswald|Open+Sans|PT+Sans|PT+Sans+Narrow|Pangolin|Raleway|Roboto|Roboto+Condensed|Titillium+Web|Yanone+Kaffeesatz" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oswald|Open+Sans|Raleway|Roboto|Roboto+Condensed|Yanone+Kaffeesatz" rel="stylesheet">
 
 	<!-- CSS style sheet -->
 	<link rel="stylesheet" href="style.css">
-	
-	<!-- Live reload -->
-	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
 </head>
 <body>
