--- a/colour/index.html
+++ b/colour/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Colour Game</title>
 	<link rel="stylesheet" href="colour.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-	<h1>The 
+	<h1>The newer
 		<br>
 		<span id="colourDisplay">RGB</span> 
 		<br>
