--- a/colour/index.html
+++ b/colour/index.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-	<h1>The newer
+	<h1>The Fantastical
 		<br>
 		<span id="colourDisplay">RGB</span> 
 		<br>
