--- a/patatap/index.html
+++ b/patatap/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Paper JS Exercise</title>
+	<title>Patatap Clone</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<script type="text/javascript" src="paper-full.js"></script>
