--- a/service/index.html
+++ b/service/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Handy Man - Your Ask, We Deliver</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<div class="ui pointing blue fixed menu">
+		<div class="ui container">
+			<div class="header item"><a href="#"><i class="wrench icon"></i>Handy</a></div>
+		</div>
+		<a class="active item">About</a>
+		<a class="item">Service</a>
+		<a class="item">Contact</a>
+	</div>
+	<div class="main ui container">
+		<div id="test" class="content">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro fuga expedita veritatis ut repudiandae veniam neque consequatur cum nobis aliquid dolores deserunt perferendis, similique eaque architecto, temporibus assumenda, rem a laudantium possimus nisi ipsam. Officia accusantium expedita, soluta nesciunt, sapiente eum repudiandae obcaecati ad ab, id odio repellendus aliquam iste.</p>
+		</div>
+	</div>
 </body>
 </html>
