--- a/service/index.html
+++ b/service/index.html
@@ -4,21 +4,48 @@
 	<meta charset="UTF-8">
 	<title>Handy Man - Your Ask, We Deliver</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="ui pointing blue fixed menu">
 		<div class="ui container">
-			<div class="header item"><a href="#"><i class="wrench icon"></i>Handy</a></div>
+			<div class="header item"><a href="#"><i class="wrench icon"></i>Mr Handy</a></div>
 		</div>
-		<a class="active item">About</a>
+		<a class="active item">Home</a>
+		<a class="item">About</a>
 		<a class="item">Service</a>
 		<a class="item">Contact</a>
 	</div>
+
+	<div id="hero">
+		<div id="logo">
+			<img src="./img/handy.png" alt="">
+			
+		</div>
+		<div id="tagline">
+			<p>You buy it - We assemble it</p>
+		</div>
+	</div>
 	<div class="main ui container">
-		<div id="test" class="content">
+		<div class="content">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro fuga expedita veritatis ut repudiandae veniam neque consequatur cum nobis aliquid dolores deserunt perferendis, similique eaque architecto, temporibus assumenda, rem a laudantium possimus nisi ipsam. Officia accusantium expedita, soluta nesciunt, sapiente eum repudiandae obcaecati ad ab, id odio repellendus aliquam iste.</p>
+		</div>
+		<div class="content">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro fuga expedita veritatis ut repudiandae veniam neque consequatur cum nobis aliquid dolores deserunt perferendis, similique eaque architecto, temporibus assumenda, rem a laudantium possimus nisi ipsam. Officia accusantium expedita, soluta nesciunt, sapiente eum repudiandae obcaecati ad ab, id odio repellendus aliquam iste.</p>
+		</div>
+		<div class="content">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro fuga expedita veritatis ut repudiandae veniam neque consequatur cum nobis aliquid dolores deserunt perferendis, similique eaque architecto, temporibus assumenda, rem a laudantium possimus nisi ipsam. Officia accusantium expedita, soluta nesciunt, sapiente eum repudiandae obcaecati ad ab, id odio repellendus aliquam iste.</p>
+		</div>
+		<div class="content">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro fuga expedita veritatis ut repudiandae veniam neque consequatur cum nobis aliquid dolores deserunt perferendis, similique eaque architecto, temporibus assumenda, rem a laudantium possimus nisi ipsam. Officia accusantium expedita, soluta nesciunt, sapiente eum repudiandae obcaecati ad ab, id odio repellendus aliquam iste.</p>
+		</div>
+		<div class="content">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro fuga expedita veritatis ut repudiandae veniam neque consequatur cum nobis aliquid dolores deserunt perferendis, similique eaque architecto, temporibus assumenda, rem a laudantium possimus nisi ipsam. Officia accusantium expedita, soluta nesciunt, sapiente eum repudiandae obcaecati ad ab, id odio repellendus aliquam iste.</p>
 		</div>
 	</div>
+	<footer>
+		<a href='https://www.freepik.com/free-vector/cute-robots-collection_713858.htm'>Robot Logo Designed by Freepik</a>
+	</footer>
 </body>
 </html>
