--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 	<header id="header">
 		<h1>Raphael Suttiyotin</h1>
-		<h2>Engineer / Educator / Coder</h2>
+		<h2>Aspiring Front End Developer</h2>
 		<ul class="social">
 			<li><a href="https://www.linkedin.com/in/raph-suttiyotin-a384a430"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
 			<li><a href="https://twitter.com/neoster9"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
