--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 		<div id="gallery"><a href="./gallery/index.html"><img src="./img/gallery.png" class="shadow" alt="gallery"></a></div>
 		<div id="colour"><a href="./colour/index.html"><img src="./img/colour.png" class="shadow" alt="colourgame"></a></div>
 		<div id="patatap"><a href="./patatap/index.html"><img src="./img/patatap.png" class="shadow" alt="patatap"></a></div>
+		<div id="book"><a href="./book/index.html"><img src="./img/book.png" class="shadow" alt="book"></a></div>
 		<div id="contact">
 			<p>Let's get in touch</p>
 			<ul class="contact2">
