--- a/colour/index.html
+++ b/colour/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Colour Game</title>
 	<link rel="stylesheet" href="colour.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Mina" rel="stylesheet">
 </head>
 <body>
 	<h1>The Fantastical
