--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 	<header id="header">
 		<h1>Raphael Suttiyotin</h1>
-		<h2>Front End Developer</h2>
+		<h2>Web Developer</h2>
 		<ul class="social">
 			<li><a href="https://www.linkedin.com/in/raph-suttiyotin-a384a430"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
 			<li><a href="https://twitter.com/neoster9"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a></li>
@@ -41,8 +41,8 @@
 		</div>
 		<section id="about">
 			<!-- <h2>About Me</h2> -->
-			<p>I'm a Project Engineer and I love to code. I volunteer at Code Club, teaching kids how to code. I enjoy creating websites and learning programming in my spare time</p>
-			<p>I've completed <a href="https://www.freecodecamp.org/raphsutti/front-end-certification">Front End Developer certification</a> with FreeCodeCamp.org, Web Development course on Udemy and completing Modern React with Redux with Udemy. I am familiar with HTML, CSS, JavaScript, JQuery and React.</p>
+			<p>I'm a Program Management Engineer and I love to code. I volunteer at Code Club, teaching kids how to code. I enjoy creating websites and learning programming</p>
+			<p>I've completed <a href="https://www.freecodecamp.org/raphsutti/front-end-certification">Front End Developer certification</a> with FreeCodeCamp.org, Web Development course on Udemy and completing Modern React with Redux with Udemy. I am familiar with HTML, CSS, JavaScript, JQuery, Ruby on Rails and some React.</p>
 			<p>Check out some of my projects below</p>
 		</section>
 		<!-- <div id="spacer"></div> -->
