--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</div>
 		<section id="about">
 			<!-- <h2>About Me</h2> -->
-			<p>I'm a Junior Full Stack Developer and I love to code. I volunteer teaching kids how to code and I enjoy creating websites and learning about programming/p>
+			<p>I'm a Junior Full Stack Developer and I love to code. I volunteer teaching kids how to code and I enjoy creating websites and learning about programming</p>
 			<p>I've completed <a href="https://www.freecodecamp.org/raphsutti/front-end-certification">Front End Developer certification</a> with FreeCodeCamp.org, Web Development course on Udemy and completing Modern React with Redux with Udemy. My stacks are HTML, CSS, JavaScript, JQuery, Bootstrap, Ruby on Rails and some React.</p>
 			<p>I have a keen eye on web designs and I enjoy learning new concepts every day</p>
 			<p>Check out some of my projects below</p>
