--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 		<div id="gallery"><a href="./gallery/index.html"><img src="./img/gallery.png" class="shadow" alt="gallery"></a></div>
 		<div id="colour"><a href="./colour/index.html"><img src="./img/colour.png" class="shadow" alt="colourgame"></a></div>
 		<div id="patatap"><a href="./patatap/index.html"><img src="./img/patatap.PNG" class="shadow" alt="patatap game"></a></div>
-		<!-- <div id="patatap"><a href="./patatap/index.html"><img src="./img/patatap2.png" class="shadow" alt="Patatap game"></a></div> -->
 		<div id="book"><a href="./book/index.html"><img src="./img/book.png" class="shadow" alt="book"></a></div>
+		<div id="railsblog"><a href="https://murmuring-dawn-66530.herokuapp.com/"><img src="./img/rb.PNG" class="shadow" alt="railsblog"></a></div>
 		<div id="contact">
 			<p>Let's get in touch</p>
 			<ul class="contact2">
